--- a/스프링-트랜잭션-소개.md
+++ b/스프링-트랜잭션-소개.md
@@ -1,1 +1,29 @@
 ## **스프링 트랜잭션 이해**
+
+![image](https://user-images.githubusercontent.com/79301439/210304820-2495f9ea-4918-4100-a834-aceb1a531347.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210305195-a871bc87-66fb-4697-a833-e5d3f33a6adb.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210305228-29f0b523-6c5e-4fb8-9eac-03534657245f.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210305260-891d435a-6274-48f8-b561-6c8c23997eb8.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210305283-acba2166-3d2c-4675-a600-a40f1d39c0bc.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210305340-93c5d96c-0802-49c2-908e-e7e13187b19f.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210305361-59a9f439-5395-4ae1-8f2d-390fdfbc7aa3.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210305407-0e353959-7fdf-4490-8e98-dedc733b98d2.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210305445-40584225-b694-4fc9-90dd-d73eda2d8e88.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210305483-4d47503a-5666-4cc5-b63c-29c0b1a6fd91.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210305507-2ac88c67-6143-4cc6-87d2-486eda288352.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210305521-012cddf4-853e-4e57-9eee-f6662d7a0b99.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210305539-6049abd3-5cb3-407a-a624-254b8725615c.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210305574-d6f85370-6656-4be4-ac1c-377e4b88c665.png)
