--- a/프로젝트-생성.md
+++ b/프로젝트-생성.md
@@ -1,1 +1,45 @@
 ## **스프링 트랜잭션 이해**
+
+![image](https://user-images.githubusercontent.com/79301439/210320670-3aadf8a7-13ac-4e26-886a-f4f7c6772f65.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210320699-9a040047-5561-4a80-a1d2-319d13294192.png)
+
+```gradle
+plugins {
+	id 'java'
+	id 'org.springframework.boot' version '2.7.6'
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+}
+
+group = 'hello'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '1.8'
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
+repositories {
+	mavenCentral()
+}
+
+dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'com.h2database:h2'
+	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//테스트에서 lombok 사용
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+}
+
+tasks.named('test') {
+	useJUnitPlatform()
+}
+```
+
+![image](https://user-images.githubusercontent.com/79301439/210320831-b527f9d0-ede6-42af-acff-83a4a43a69b1.png)
