--- a/트랜잭션-옵션-소개.md
+++ b/트랜잭션-옵션-소개.md
@@ -1,1 +1,13 @@
 ## **스프링 트랜잭션 이해**
+
+![image](https://user-images.githubusercontent.com/79301439/210966809-f8cca69f-f178-4667-b0c5-e09a4b72c716.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210966902-7c8f2b5e-0d5c-41aa-88c8-af1e0ee0abaf.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210966951-9a283be8-00ae-4b91-9edf-4b1491978a80.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210966994-f57cad79-b48c-4f5f-ab23-65bd59b1d1d0.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210967036-d7b3f291-f68a-4a5f-be4e-53896b3dc4ee.png)
+
+![image](https://user-images.githubusercontent.com/79301439/210967089-78bc8ce6-b30c-4858-88be-e4b3fd312fd4.png)
