--- a/스프링-트랜잭션-전파4-전파-예제.md
+++ b/스프링-트랜잭션-전파4-전파-예제.md
@@ -1,1 +1,39 @@
 ## **스프링 트랜잭션 전파1 - 기본**
+
+![image](https://user-images.githubusercontent.com/79301439/211274451-012e3803-c0f2-4e0e-a09e-e59f6993a1fb.png)
+
+![image](https://user-images.githubusercontent.com/79301439/211274504-bb144736-4af8-45a7-bc7a-e1d80b7817f8.png)
+
+```java
+@Test
+void inner_commit() {
+    log.info("외부 트랜잭션 시작");
+    TransactionStatus outer = txManager.getTransaction(new DefaultTransactionAttribute());
+    log.info("outer.isNewTransaction()={}", outer.isNewTransaction());
+
+    log.info("내부 트랜잭션 시작");
+    TransactionStatus inner = txManager.getTransaction(new DefaultTransactionAttribute());
+    log.info("inner.isNewTransaction()={}", inner.isNewTransaction());
+    log.info("내부 트랜잭션 커밋");
+    txManager.commit(inner);
+
+    log.info("외부 트랜잭션 커밋");
+    txManager.commit(outer);
+}
+```
+
+![image](https://user-images.githubusercontent.com/79301439/211274704-1da71647-faca-41b6-bf58-ec4e5b91f953.png)
+
+![image](https://user-images.githubusercontent.com/79301439/211274753-0c91b010-2ecd-45b1-83d5-7559bcd24041.png)
+
+![image](https://user-images.githubusercontent.com/79301439/211275137-79c2c268-bde3-4c75-ba22-fd3f5674dd40.png)
+
+![image](https://user-images.githubusercontent.com/79301439/211275180-dd57b658-cb31-4f1a-b77b-afa19081ea49.png)
+
+![image](https://user-images.githubusercontent.com/79301439/211275234-57f6df02-ad96-4116-93be-ede54f831f33.png)
+
+![image](https://user-images.githubusercontent.com/79301439/211275342-d397a2f9-94e9-4ab7-bed9-9300fc6d976a.png)
+
+![image](https://user-images.githubusercontent.com/79301439/211275399-6714955b-a8fa-4fa8-bb06-a92d533c5b63.png)
+
+![image](https://user-images.githubusercontent.com/79301439/211275500-3b1aa90c-e71b-4f55-8def-7e296b6c4ec3.png)
