--- a/트랜잭션-전파-활용2-커밋-롤백.md
+++ b/트랜잭션-전파-활용2-커밋-롤백.md
@@ -45,7 +45,7 @@ void outerTxOff_fail() {
     assertThatThrownBy(() -> memberService.joinV1(username))
                     .isInstanceOf(RuntimeException.class);
 
-    //then: 모든 데이터가 정상 저장된다.
+    //then: 로그 데이터는 롤백된다.
     assertTrue(memberRepository.find(username).isPresent());
     assertTrue(logRepository.find(username).isEmpty());
 }
