--- a/트랜잭션-전파-활용5-전파-롤백.md
+++ b/트랜잭션-전파-활용5-전파-롤백.md
@@ -1,1 +1,34 @@
 ## **스프링 트랜잭션 전파2 - 활용**
+
+![image](https://user-images.githubusercontent.com/79301439/211327200-9bf7bf18-292c-459b-b101-1cf4ec538e6d.png)
+
+![image](https://user-images.githubusercontent.com/79301439/211327251-d324eb13-0178-486c-8ffd-cd3b40e09e84.png)
+
+```java
+/**
+ * memberService    @Transactional:ON
+ * memberRepository @Transactional:ON
+ * logRepository    @Transactional:ON Exception
+ */
+@Test
+void outerTxOn_fail() {
+    //given
+    String username = "로그예외_outerTxOn_fail";
+
+    //when
+    assertThatThrownBy(() -> memberService.joinV1(username))
+            .isInstanceOf(RuntimeException.class);
+
+    //then: 모든 데이터가 롤백된다.
+    assertTrue(memberRepository.find(username).isEmpty());
+    assertTrue(logRepository.find(username).isEmpty());
+}
+```
+
+![image](https://user-images.githubusercontent.com/79301439/211327349-1b8f7562-dd09-41c7-aa55-9172f473e9d6.png)
+
+![image](https://user-images.githubusercontent.com/79301439/211327407-880e2ec4-5a85-4b1d-a22e-8e8d1f12357f.png)
+
+![image](https://user-images.githubusercontent.com/79301439/211327481-cc6f136f-e399-45ff-ae1a-2772e38e4160.png)
+
+![image](https://user-images.githubusercontent.com/79301439/211327522-4012fb35-a784-4c44-92ed-f9e24545798b.png)
